welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: illegal start of simple expression
  while(){
        ^SlugTracking:16: error: ')' expected but '}' found.
} 
^